 <resources>
    <string name="app_name">perpusapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama_peminjam">Nama Peminjam</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="tanggal_pinjam">Tanggal Pinjam</string>
    <string name="tanggal_kembali">tanggal kembali</string>
    <string name="status">Status</string>
    <string name="proses_pengembalian">Proses Pengembalian</string>
    <string name="simpan">SIMPAN</string>
    <string name="clear">CLEAR</string>
    <string name="hapus">HAPUS</string>
    <string name="urutkan">Urutkan</string>/>

    <string-array name="choise_sort1">
        <item>Semua Data</item>
        <item>Dipinjam</item>
        <item>Dikembalikan</item>
    </string-array>
</resources>
