<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#DAC0A3"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignTop="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <EditText
                android:id="@+id/txID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_peminjam"
                android:textColor="@color/black"
                android:layout_margin="6dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/txNamaAnggota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="#ffff"
                android:inputType="textCapSentences"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_buku"
                android:textColor="@color/black"
                android:layout_margin="6dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/txJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:background="#ffff"
                android:inputType="textCapSentences"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_pinjam"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="6dp"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/txPinjam"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="#ffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_kembali"
                android:textColor="@color/black"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txKembali"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="#ffff"
                android:inputType="date"/>
            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/txStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:focusable="false"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnProses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/proses_pengembalian"
        style="@style/Widget.AppCompat.Button.Colored"
        android:visibility="gone"/>
</RelativeLayout>
